compiler/TP3/cool.output
Terminais sem uso na gramática

    ERROR


Gramática

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    6 dummy_feature_list: %empty
    7                   | dummy_feature_list feature

    8 feature: OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID '(' formal formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID ':' TYPEID ';'
   11        | OBJECTID ':' TYPEID ASSIGN expr ';'

   12 formal_list: %empty
   13            | formal_list ',' formal

   14 formal: OBJECTID ':' TYPEID

   15 expr_list: expr
   16          | expr_list expr ';'

   17 dummy_expr_list: %empty
   18                | dummy_expr_list ',' expr

   19 let_list: IN expr
   20         | ',' OBJECTID ':' TYPEID let_list
   21         | ',' OBJECTID ':' TYPEID ASSIGN expr let_list

   22 case_match: OBJECTID ':' TYPEID DARROW expr ';'

   23 case_match_list: case_match
   24                | case_match_list case_match

   25 expr: OBJECTID ASSIGN expr
   26     | expr '.' OBJECTID '(' ')'
   27     | expr '.' OBJECTID '(' expr dummy_expr_list ')'
   28     | expr '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr '@' TYPEID '.' OBJECTID '(' expr dummy_expr_list ')'
   30     | OBJECTID '(' ')'
   31     | OBJECTID '(' expr dummy_expr_list ')'
   32     | IF expr THEN expr ELSE expr FI
   33     | WHILE expr LOOP expr POOL
   34     | '{' expr_list '}'
   35     | LET OBJECTID ':' TYPEID let_list
   36     | LET OBJECTID ':' TYPEID ASSIGN expr let_list
   37     | CASE expr OF case_match_list ESAC
   38     | NEW TYPEID
   39     | ISVOID expr
   40     | expr '+' expr
   41     | expr '-' expr
   42     | expr '*' expr
   43     | expr '/' expr
   44     | '~' expr
   45     | expr '<' expr
   46     | expr LE expr
   47     | expr '=' expr
   48     | NOT expr
   49     | '(' expr ')'
   50     | OBJECTID
   51     | INT_CONST
   52     | STR_CONST
   53     | BOOL_CONST


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 8 9 26 27 28 29 30 31 49
    ')' (41) 8 9 26 27 28 29 30 31 49
    '*' (42) 42
    '+' (43) 40
    ',' (44) 13 18 20 21
    '-' (45) 41
    '.' (46) 26 27 28 29
    '/' (47) 43
    ':' (58) 8 9 10 11 14 20 21 22 35 36
    ';' (59) 4 5 8 9 10 11 16 22
    '<' (60) 45
    '=' (61) 47
    '@' (64) 28 29
    '{' (123) 4 5 8 9 34
    '}' (125) 4 5 8 9 34
    '~' (126) 44
    error (256)
    CLASS (258) 4 5
    ELSE (259) 32
    FI (260) 32
    IF (261) 32
    IN (262) 19
    INHERITS (263) 5
    LET (264) 35 36
    LOOP (265) 33
    POOL (266) 33
    THEN (267) 32
    WHILE (268) 33
    CASE (269) 37
    ESAC (270) 37
    OF (271) 37
    DARROW (272) 22
    NEW (273) 38
    ISVOID (274) 39
    STR_CONST <symbol> (275) 52
    INT_CONST <symbol> (276) 51
    BOOL_CONST <boolean> (277) 53
    TYPEID <symbol> (278) 4 5 8 9 10 11 14 20 21 22 28 29 35 36 38
    OBJECTID <symbol> (279) 8 9 10 11 14 20 21 22 25 26 27 28 29 30 31 35 36 50
    ASSIGN (280) 11 21 25 36
    NOT (281) 48
    LE (282) 46
    ERROR (283)
    LETPREC (285)
    CALLPREC (286)


Não terminais com as regras onde eles aparecem

    $accept (47)
        à esquerda: 0
    program <program> (48)
        à esquerda: 1
        à direita: 0
    class_list <classes> (49)
        à esquerda: 2 3
        à direita: 1 3
    class <class_> (50)
        à esquerda: 4 5
        à direita: 2 3
    dummy_feature_list <features> (51)
        à esquerda: 6 7
        à direita: 4 5 7
    feature <feature> (52)
        à esquerda: 8 9 10 11
        à direita: 7
    formal_list <formals> (53)
        à esquerda: 12 13
        à direita: 9 13
    formal <formal> (54)
        à esquerda: 14
        à direita: 9 13
    expr_list <expressions> (55)
        à esquerda: 15 16
        à direita: 16 34
    dummy_expr_list <expressions> (56)
        à esquerda: 17 18
        à direita: 18 27 29 31
    let_list <expression> (57)
        à esquerda: 19 20 21
        à direita: 20 21 35 36
    case_match <case_> (58)
        à esquerda: 22
        à direita: 23 24
    case_match_list <cases> (59)
        à esquerda: 23 24
        à direita: 24 37
    expr <expression> (60)
        à esquerda: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
        à direita: 8 9 11 15 16 18 19 21 22 25 26 27 28 29 31 32 33 36 37 39 40 41 42 43 44 45 46 47 48 49


Estado 0

    0 $accept: . program $end

    CLASS  deslocar, e ir ao estado 1

    program     ir ao estado 2
    class_list  ir ao estado 3
    class       ir ao estado 4


Estado 1

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  deslocar, e ir ao estado 5


Estado 2

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 6


Estado 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 1 (program)

    class  ir ao estado 7


Estado 4

    2 class_list: class .

    $padrão  reduzir usando a regra 2 (class_list)


Estado 5

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  deslocar, e ir ao estado 8
    '{'       deslocar, e ir ao estado 9


Estado 6

    0 $accept: program $end .

    $padrão  aceitar


Estado 7

    3 class_list: class_list class .

    $padrão  reduzir usando a regra 3 (class_list)


Estado 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  deslocar, e ir ao estado 10


Estado 9

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'

    $padrão  reduzir usando a regra 6 (dummy_feature_list)

    dummy_feature_list  ir ao estado 11


Estado 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'

    '{'  deslocar, e ir ao estado 12


Estado 11

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'
    7 dummy_feature_list: dummy_feature_list . feature

    OBJECTID  deslocar, e ir ao estado 13
    '}'       deslocar, e ir ao estado 14

    feature  ir ao estado 15


Estado 12

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'

    $padrão  reduzir usando a regra 6 (dummy_feature_list)

    dummy_feature_list  ir ao estado 16


Estado 13

    8 feature: OBJECTID . '(' ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID . '(' formal formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . ':' TYPEID ';'
   11        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  deslocar, e ir ao estado 17
    ':'  deslocar, e ir ao estado 18


Estado 14

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  deslocar, e ir ao estado 19


Estado 15

    7 dummy_feature_list: dummy_feature_list feature .

    $padrão  reduzir usando a regra 7 (dummy_feature_list)


Estado 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'
    7 dummy_feature_list: dummy_feature_list . feature

    OBJECTID  deslocar, e ir ao estado 13
    '}'       deslocar, e ir ao estado 20

    feature  ir ao estado 15


Estado 17

    8 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID '(' . formal formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  deslocar, e ir ao estado 21
    ')'       deslocar, e ir ao estado 22

    formal  ir ao estado 23


Estado 18

   10 feature: OBJECTID ':' . TYPEID ';'
   11        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  deslocar, e ir ao estado 24


Estado 19

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $padrão  reduzir usando a regra 4 (class)


Estado 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  deslocar, e ir ao estado 25


Estado 21

   14 formal: OBJECTID . ':' TYPEID

    ':'  deslocar, e ir ao estado 26


Estado 22

    8 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}' ';'

    ':'  deslocar, e ir ao estado 27


Estado 23

    9 feature: OBJECTID '(' formal . formal_list ')' ':' TYPEID '{' expr '}' ';'

    $padrão  reduzir usando a regra 12 (formal_list)

    formal_list  ir ao estado 28


Estado 24

   10 feature: OBJECTID ':' TYPEID . ';'
   11        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  deslocar, e ir ao estado 29
    ';'     deslocar, e ir ao estado 30


Estado 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $padrão  reduzir usando a regra 5 (class)


Estado 26

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  deslocar, e ir ao estado 31


Estado 27

    8 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  deslocar, e ir ao estado 32


Estado 28

    9 feature: OBJECTID '(' formal formal_list . ')' ':' TYPEID '{' expr '}' ';'
   13 formal_list: formal_list . ',' formal

    ')'  deslocar, e ir ao estado 33
    ','  deslocar, e ir ao estado 34


Estado 29

   11 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr  ir ao estado 49


Estado 30

   10 feature: OBJECTID ':' TYPEID ';' .

    $padrão  reduzir usando a regra 10 (feature)


Estado 31

   14 formal: OBJECTID ':' TYPEID .

    $padrão  reduzir usando a regra 14 (formal)


Estado 32

    8 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}' ';'

    '{'  deslocar, e ir ao estado 50


Estado 33

    9 feature: OBJECTID '(' formal formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  deslocar, e ir ao estado 51


Estado 34

   13 formal_list: formal_list ',' . formal

    OBJECTID  deslocar, e ir ao estado 21

    formal  ir ao estado 52


Estado 35

   32 expr: IF . expr THEN expr ELSE expr FI

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr  ir ao estado 53


Estado 36

   35 expr: LET . OBJECTID ':' TYPEID let_list
   36     | LET . OBJECTID ':' TYPEID ASSIGN expr let_list

    OBJECTID  deslocar, e ir ao estado 54


Estado 37

   33 expr: WHILE . expr LOOP expr POOL

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr  ir ao estado 55


Estado 38

   37 expr: CASE . expr OF case_match_list ESAC

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr  ir ao estado 56


Estado 39

   38 expr: NEW . TYPEID

    TYPEID  deslocar, e ir ao estado 57


Estado 40

   39 expr: ISVOID . expr

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr  ir ao estado 58


Estado 41

   52 expr: STR_CONST .

    $padrão  reduzir usando a regra 52 (expr)


Estado 42

   51 expr: INT_CONST .

    $padrão  reduzir usando a regra 51 (expr)


Estado 43

   53 expr: BOOL_CONST .

    $padrão  reduzir usando a regra 53 (expr)


Estado 44

   25 expr: OBJECTID . ASSIGN expr
   30     | OBJECTID . '(' ')'
   31     | OBJECTID . '(' expr dummy_expr_list ')'
   50     | OBJECTID .

    ASSIGN  deslocar, e ir ao estado 59
    '('     deslocar, e ir ao estado 60

    $padrão  reduzir usando a regra 50 (expr)


Estado 45

   48 expr: NOT . expr

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr  ir ao estado 61


Estado 46

   49 expr: '(' . expr ')'

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr  ir ao estado 62


Estado 47

   44 expr: '~' . expr

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr  ir ao estado 63


Estado 48

   34 expr: '{' . expr_list '}'

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr_list  ir ao estado 64
    expr       ir ao estado 65


Estado 49

   11 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   26 expr: expr . '.' OBJECTID '(' ')'
   27     | expr . '.' OBJECTID '(' expr dummy_expr_list ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' expr dummy_expr_list ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    LE   deslocar, e ir ao estado 66
    '<'  deslocar, e ir ao estado 67
    '='  deslocar, e ir ao estado 68
    '+'  deslocar, e ir ao estado 69
    '-'  deslocar, e ir ao estado 70
    '*'  deslocar, e ir ao estado 71
    '/'  deslocar, e ir ao estado 72
    '@'  deslocar, e ir ao estado 73
    '.'  deslocar, e ir ao estado 74
    ';'  deslocar, e ir ao estado 75


Estado 50

    8 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}' ';'

    IF          deslocar, e ir ao estado 35
    LET         deslocar, e ir ao estado 36
    WHILE       deslocar, e ir ao estado 37
    CASE        deslocar, e ir ao estado 38
    NEW         deslocar, e ir ao estado 39
    ISVOID      deslocar, e ir ao estado 40
    STR_CONST   deslocar, e ir ao estado 41
    INT_CONST   deslocar, e ir ao estado 42
    BOOL_CONST  deslocar, e ir ao estado 43
    OBJECTID    deslocar, e ir ao estado 44
    NOT         deslocar, e ir ao estado 45
    '('         deslocar, e ir ao estado 46
    '~'         deslocar, e ir ao estado 47
    '{'         deslocar, e ir ao estado 48

    expr  ir ao estado 76


Estado 51

    9 feature: OBJECTID '(' formal formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  deslocar, e ir ao estado 77


Estado 52

   13 formal_list: formal_list ',' formal .

    $padrão  reduzir usando a regra 13 (formal_list)


Estado 53

   26 expr: expr . '.' OBJECTID '(' ')'
   27     | expr . '.' OBJECTID '(' expr dummy_expr_list ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' expr dummy_expr_list ')'
   32     | IF expr . THEN expr ELSE expr FI
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    THEN  deslocar, e ir ao estado 78
    LE    deslocar, e ir ao estado 66
    '<'   deslocar, e ir ao estado 67
    '='   deslocar, e ir ao estado 68
    '+'   deslocar, e ir ao estado 69
    '-'   deslocar, e ir ao estado 70
    '*'   deslocar, e ir ao estado 71
    '/'   deslocar, e ir ao estado 72
    '@'   deslocar, e ir ao estado 73
    '.'   deslocar, e ir ao estado 74


Estado 54

   35 expr: LET OBJECTID . ':' TYPEID let_list
   36     | LET OBJECTID . ':' TYPEID ASSIGN expr let_list

    ':'  deslocar, e ir ao estado 79


Estado 55

   26 expr: expr . '.' OBJECTID '(' ')'
   27     | expr . '.' OBJECTID '(' expr dummy_expr_list ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' expr dummy_expr_list ')'
   33     | WHILE expr . LOOP expr POOL
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr
